--- a/project/client/index.html
+++ b/project/client/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Servidor A - Sistema de Reservas</title>
-  <link rel="stylesheet" href="styles.css"> <!-- Link para o CSS externo -->
-  <script src="scripts.js" defer></script> <!-- Link para o JS externo -->
+  <link rel="stylesheet" href="styles.css">
+  <script src="scripts.js" defer></script>
 </head>
 <body onload="carregarTrechos()">
   <h1>Servidor A - Sistema de Reservas</h1>
