--- a/project/client/index.html
+++ b/project/client/index.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="styles.css">
   <script src="scripts.js" defer></script>
 </head>
-<body onload="carregarTrechos()">
+<body onload="carregarRotas()">
   <h1>Servidor A - Sistema de Reservas</h1>
 
   <section>
     <h2>Filtrar Trechos</h2>
-    <form onsubmit="event.preventDefault(); filtrarTrechos();">
+    <form onsubmit="event.preventDefault(); carregarRotas();">
       <label for="origem">Origem:</label>
       <select id="origem">
         <option value="">Selecione a origem</option>
