--- a/project/client/index.html
+++ b/project/client/index.html
@@ -7,27 +7,46 @@
   <link rel="stylesheet" href="styles.css">
   <script src="scripts.js" defer></script>
 </head>
-<body onload="carregarRotas()">
+<body>
   <h1>Servidor A - Sistema de Reservas</h1>
 
   <section>
     <h2>Filtrar Trechos</h2>
-    <form onsubmit="event.preventDefault(); carregarRotas();">
-      <label for="origem">Origem:</label>
-      <select id="origem">
-        <option value="">Selecione a origem</option>
-        <!-- Adicione opções de origem aqui -->
-      </select>
+    <form id="formFiltro" onsubmit="event.preventDefault(); carregarRotas();">
+        <label for="origem">Origem:</label>
+        <select id="origem">
+            <option value="">Selecione a origem</option>
+            <option value="São Paulo">São Paulo</option>
+            <option value="Rio de Janeiro">Rio de Janeiro</option>
+            <option value="Brasília">Brasília</option>
+            <option value="Salvador">Salvador</option>
+            <option value="Fortaleza">Fortaleza</option>
+            <option value="Belo Horizonte">Belo Horizonte</option>
+            <option value="Manaus">Manaus</option>
+            <option value="Curitiba">Curitiba</option>
+            <option value="Recife">Recife</option>
+            <option value="Porto Alegre">Porto Alegre</option>
+        </select>
 
-      <label for="destino">Destino:</label>
-      <select id="destino">
-        <option value="">Selecione o destino</option>
-        <!-- Adicione opções de destino aqui -->
-      </select>
+        <label for="destino">Destino:</label>
+        <select id="destino">
+            <option value="">Selecione o destino</option>
+            <option value="São Paulo">São Paulo</option>
+            <option value="Rio de Janeiro">Rio de Janeiro</option>
+            <option value="Brasília">Brasília</option>
+            <option value="Salvador">Salvador</option>
+            <option value="Fortaleza">Fortaleza</option>
+            <option value="Belo Horizonte">Belo Horizonte</option>
+            <option value="Manaus">Manaus</option>
+            <option value="Curitiba">Curitiba</option>
+            <option value="Recife">Recife</option>
+            <option value="Porto Alegre">Porto Alegre</option>
+        </select>
 
-      <button type="submit">Filtrar</button>
+        <button type="submit">Filtrar</button>
     </form>
-  </section>
+</section>
+
 
   <section>
     <h2>Trechos Disponíveis</h2>
