--- a/project/client/index.html
+++ b/project/client/index.html
@@ -15,32 +15,33 @@
     <form id="formFiltro" onsubmit="event.preventDefault(); carregarRotas();">
         <label for="origem">Origem:</label>
         <select id="origem">
-            <option value="">Selecione a origem</option>
-            <option value="São Paulo">São Paulo</option>
-            <option value="Rio de Janeiro">Rio de Janeiro</option>
-            <option value="Brasília">Brasília</option>
-            <option value="Salvador">Salvador</option>
-            <option value="Fortaleza">Fortaleza</option>
-            <option value="Belo Horizonte">Belo Horizonte</option>
-            <option value="Manaus">Manaus</option>
-            <option value="Curitiba">Curitiba</option>
-            <option value="Recife">Recife</option>
-            <option value="Porto Alegre">Porto Alegre</option>
+          <option value="">Selecione a origem</option>
+          <option value="São Paulo">São Paulo</option>
+          <option value="Rio de Janeiro">Rio de Janeiro</option>
+          <option value="Brasília">Brasília</option>
+          <option value="Salvador">Salvador</option>
+          <option value="Fortaleza">Fortaleza</option>
+          <option value="Belo Horizonte">Belo Horizonte</option>
+          <option value="Manaus">Manaus</option>
+          <option value="Curitiba">Curitiba</option>
+          <option value="Recife">Recife</option>
+          <option value="Porto Alegre">Porto Alegre</option>
+
         </select>
 
         <label for="destino">Destino:</label>
         <select id="destino">
-            <option value="">Selecione o destino</option>
-            <option value="São Paulo">São Paulo</option>
-            <option value="Rio de Janeiro">Rio de Janeiro</option>
-            <option value="Brasília">Brasília</option>
-            <option value="Salvador">Salvador</option>
-            <option value="Fortaleza">Fortaleza</option>
-            <option value="Belo Horizonte">Belo Horizonte</option>
-            <option value="Manaus">Manaus</option>
-            <option value="Curitiba">Curitiba</option>
-            <option value="Recife">Recife</option>
-            <option value="Porto Alegre">Porto Alegre</option>
+          <option value="">Selecione a origem</option>
+          <option value="São Paulo">São Paulo</option>
+          <option value="Rio de Janeiro">Rio de Janeiro</option>
+          <option value="Brasília">Brasília</option>
+          <option value="Salvador">Salvador</option>
+          <option value="Fortaleza">Fortaleza</option>
+          <option value="Belo Horizonte">Belo Horizonte</option>
+          <option value="Manaus">Manaus</option>
+          <option value="Curitiba">Curitiba</option>
+          <option value="Recife">Recife</option>
+          <option value="Porto Alegre">Porto Alegre</option>
         </select>
 
         <button type="submit">Filtrar</button>
@@ -48,30 +49,21 @@
 </section>
 
 <section>
-    <h2>Trechos Disponíveis</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Rota</th>
-          <th>Distância (km)</th>
-          <th>Ação</th>
-        </tr>
-      </thead>
-      <tbody id="trechosBody">
-        <tr>
-          <td colspan="3">Carregando trechos...</td>
-        </tr>
-      </tbody>
-    </table>
-</section>
-
-<section>
-    <h2>Confirmar Compra de Trecho</h2>
-    <form onsubmit="event.preventDefault(); confirmarCompra();">
-      <label for="trechoIdCompra">ID do Trecho para Compra:</label>
-      <input type="text" id="trechoIdCompra" placeholder="Ex: 1" required>
-      <button type="submit">Confirmar Compra</button>
-    </form>
+  <h2>Trechos Disponíveis</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Rota</th>
+        <th>Distância (km)</th>
+        <th>Ação</th>
+      </tr>
+    </thead>
+    <tbody id="trechosBody">
+      <tr>
+        <td colspan="3">Selecione o destino e a origem para encontrar rotas.</td>
+      </tr>
+    </tbody>
+  </table>
 </section>
 
 <section>
