--- a/project/client/index.html
+++ b/project/client/index.html
@@ -10,7 +10,8 @@
 <body>
   <h1>Servidor A - Sistema de Reservas</h1>
 
-  <section>
+  <!-- Formulário de Filtro -->
+  <section class="compact-section">
     <h2>Filtrar Trechos</h2>
     <form id="formFiltro" onsubmit="event.preventDefault(); carregarRotas();">
         <label for="origem">Origem:</label>
@@ -26,12 +27,11 @@
           <option value="Curitiba">Curitiba</option>
           <option value="Recife">Recife</option>
           <option value="Porto Alegre">Porto Alegre</option>
-
         </select>
 
         <label for="destino">Destino:</label>
         <select id="destino">
-          <option value="">Selecione a origem</option>
+          <option value="">Selecione o destino</option>
           <option value="São Paulo">São Paulo</option>
           <option value="Rio de Janeiro">Rio de Janeiro</option>
           <option value="Brasília">Brasília</option>
@@ -46,29 +46,31 @@
 
         <button type="submit">Filtrar</button>
     </form>
-</section>
+  </section>
 
-<section>
-  <h2>Trechos Disponíveis</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>Rota</th>
-        <th>Distância (km)</th>
-        <th>Ação</th>
-      </tr>
-    </thead>
-    <tbody id="trechosBody">
-      <tr>
-        <td colspan="3">Selecione o destino e a origem para encontrar rotas.</td>
-      </tr>
-    </tbody>
-  </table>
-</section>
+  <!-- Tabela de Trechos -->
+  <section class="compact-section">
+    <h2>Trechos Disponíveis</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Rota</th>
+          <th>Distância (km)</th>
+          <th>Ação</th>
+        </tr>
+      </thead>
+      <tbody id="trechosBody">
+        <tr>
+          <td colspan="3">Selecione o destino e a origem para encontrar rotas.</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
 
-<section>
+  <!-- Log de Atividades -->
+  <section class="compact-section">
     <h2>Logs</h2>
     <div id="log"></div>
-</section>
+  </section>
 </body>
 </html>
